# witrium-py

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
witrium/: README.md  __init__.py  client.py
